[gd_scene load_steps=5 format=3 uid="uid://b11bx1b6xyayj"]

[ext_resource type="Script" uid="uid://df83fmrvjl41v" path="res://scripts/planet.gd" id="1_h8ms6"]
[ext_resource type="Texture2D" uid="uid://c3eh1fu2w1ijq" path="res://assets/Planets and Astroids/Work Planet.png" id="2_h8ms6"]
[ext_resource type="Texture2D" uid="uid://c20cc61pj1nae" path="res://assets/light.png" id="3_ggt7d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a6ybu"]
radius = 617.066

[node name="Planet" type="Area2D"]
script = ExtResource("1_h8ms6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a6ybu")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_h8ms6")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.2
texture = ExtResource("3_ggt7d")
texture_scale = 2.5

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
